# CSS30

./: README.md  pyproject.toml
project1/: __main__.py  connection.py  main.py  requests.py  service.py  signer.py  test.py  ui.py
project2/: README.md  __main__.py  client.py  main.py  msgs.py  server.py  signer.py  test.py
project3/: README.md  trab3_spec.md
project3/client/: package-lock.json  package.json
project3/client/src/: App.css  App.tsx  Resource.css  Resource.tsx
project3/server/: app.py  main.py  resource_hdlr.py  server.py  test.py
