[tool.poetry]
name = "CSS30"
version = "0.0.0"
description = ""
authors = ["Waine Oliveira Jr <waine.oliveira.jr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
Pyro5 = "^5.13.1"
pycryptodome = "^3.14.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
